<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#4FCC00"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/history_return"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:src="@drawable/deal_return" />

        <TextView
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/history"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/view_border3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:layout_margin="3dp">
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/history_price"
            android:layout_height="match_parent"

            android:gravity="center"/>
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/history_num"
            android:layout_height="match_parent"

            android:gravity="center"/>
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/history_real"
            android:layout_height="match_parent"

            android:gravity="center"/>
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/history_time"
            android:layout_height="match_parent"/>
        <TextView
            android:textSize="15sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/history_status"
            android:layout_height="match_parent"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>
</LinearLayout>
