<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77ac98"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="right">
            <ImageView
                android:id="@+id/close_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/closelogin"/>
        </LinearLayout>
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_margin="20dp"
            android:layout_gravity="center" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/user_id" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/user_pwd"/>
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        >
        <EditText
            android:id="@+id/verification"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:hint="@string/user_code"
            android:gravity="center"
            android:layout_marginRight="40dp"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"

            android:id="@+id/sendverification"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/user_send_code"

            android:gravity="center"
            android:textSize="21dp"
            android:background="@drawable/btn_shape"/>


    </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_margin="20dp"
            android:text="@string/user_login"
            android:background="@drawable/btn_shape"/>

        <TextView android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="No account yet? Create one"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
