<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#4FCC00">
        <ImageView
            android:src="@drawable/deal_return"
            android:id="@+id/restingorder_return"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="挂单"
            android:textSize="22dp"
            android:layout_weight="10"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:text="@string/order_optimalprice"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/optimalprice"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:textStyle="bold"
                android:text="@string/order_rmb"/>
            <TextView
                android:id="@+id/order_rmb"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical"></LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DEDEDE"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/order_price"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/order_price"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:background="@null"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DEDEDE"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/order_num"/>
            <EditText
                android:id="@+id/order_num"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:background="@null"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DEDEDE"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/order_pass"/>
            <EditText
                android:id="@+id/order_pass"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:background="@null"
                android:inputType="textPassword"
                android:layout_height="match_parent" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DEDEDE"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
        <Button
            android:id="@+id/Restingorder_gudan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:background="@drawable/view_border4"
            android:text="@string/order_sub"/>
            </LinearLayout>
    </LinearLayout>


</LinearLayout>
