<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#4FCC00">
        <ImageView
            android:src="@drawable/deal_return"
            android:id="@+id/virement_return"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/virement"
            android:textSize="22dp"
            android:layout_weight="10"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:text="A币:"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/virement_A"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:text="@string/virement_type"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"></LinearLayout>
            <Spinner
                android:id="@+id/virement_type"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="right"
                android:layout_height="match_parent"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"></LinearLayout>
            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical"></LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="#DEDEDE" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="match_parent"
                android:text="@string/virement_account"
                android:gravity="center"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/virement_account"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:background="@null" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DEDEDE"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/virement_num"/>
            <EditText
                android:id="@+id/virement_num"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#DEDEDE"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/virement_pass"/>
            <EditText
                android:id="@+id/virement_pass"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:inputType="textPassword"
                android:layout_height="match_parent"
                android:background="@null"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="#DEDEDE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/Virement_sure"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="40dp"
                android:background="@drawable/view_border4"
                android:text="@string/virement_sub"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:orientation="vertical">

</LinearLayout>
        </LinearLayout>
</LinearLayout>
